# sdmlab

./: .gitignore  .gitmodules  LICENSE  README.md  README.org  SDM.idr  hazel.cabal
cmake/Modules/: FindCereal.cmake  FindZeroMQ.cmake
compiler/: LICENCE  Notes.org  README.md  gator.cabal  gator.hs
doc/: Doxyfile  insert-log.txt
dsl/: LICENSE  README.md  dsl.cabal
dsl/src/: gecko.hs
dsl/src/Gecko/Language/: AST.hs  Analyzer.y  Lexer.hs  MonadicParser.hs
gator/gator/: gator.1  main.c
gator/gator.xcodeproj/: project.pbxproj
gpu/: LICENSE  fwaccel.hs  gpu.cabal  gpucheck.hs
hask/: ChangeLog.md  cabal.config  molemind.cabal
hask/src/Database/: SDM.hs
hask/src/Database/SDM/: Encoding.hs  Messages.hs  Transport.hs
hllvm/: LICENSE  README.md  hsdm.cabal
hllvm/hsrc/Database/: SDM.hs
hllvm/hsrc/Molemind/Examples/: Main.hs  Makefile  Primops.hs  RegularFunctions.hs  get_message.c
hllvm/hsrc/Molemind/SDM/Internal/: Primops.hs
hsdm/: ChangeLog.md  Makefile  README.md  cabal.config  hsdm.cabal  size_t.c  stack.yaml
hsdm/Database/SDM/: Algebra.hs  Bootstrap.hs  Query.hs
hsdm/Database/SDM/Internal/: CSDM.hs  Decode.hs  SDM.hs  SDMLIB.chs
hsdm/Database/SDM/Query/: AST.hs  Eval.hs  IO.hs
hsdm/demo/: Main.hs
hsdm/lib/Database/: SDM.hs
hsdm/lib/Database/SDM/: Algebra.hs
hsdm/lib/Database/SDM/Internal/: Decode.hs  SDMLIB.chs
hsdm/lib/Database/SDM/Query/: AST.hs  Eval.hs  IO.hs  Parser.hs
hsdm/lib/Math/: Algebra.hs
hsdm/sdmq/: sdmq.hs
ios/gecko/gecko/: AppDelegate.swift  Info.plist  ViewController.swift
ios/gecko/gecko.xcodeproj/: project.pbxproj
ios/gecko/gecko/Base.lproj/: LaunchScreen.xib  Main.storyboard
ios/gecko/gecko/gecko.xcdatamodeld/: .xccurrentversion
ios/gecko/geckoTests/: Info.plist  geckoTests.swift
kernel/: Makefile  NOTES.org  README.md  README.org  binvec.c
kernel/ref/: binary_vector.hpp  binvec.cpp  binvec.hpp  space.hpp  symbol_table.hpp  valloc.hpp
lib/: CMakeLists.txt
lib/rtl/: CMakeLists.txt  Makefile  api.h  sdm.h  sdm_vspace.c  vectors.c
lib/test/: CMakeLists.txt  test_api.c  test_runtime.c  test_vectors.c  timer.h
lib/util/: rand.h
lib/vspace/: vectors.h  vectorspace.h
py/: CMakeLists.txt  README.md  pysdm.cpp  topology.py
runtime/: CMakeLists.txt  LICENSE  Makefile  README.md  binary_vectorarray.hpp  main.cpp  main2.cpp  runtime.cabal  runtime.cpp  runtime.hpp  runtime_exceptions.hpp  test.cpp  unistd_fix.h  utils.h  vecspace.hs  vectorarray.hpp
runtime/repl/: CMakeLists.txt  main.cpp
runtime/rtl/: CMakeLists.txt  runtime.cpp  runtime.hpp
runtime/symtab/: CMakeLists.txt  main.cpp  multiindex.cpp  table.cpp  table.hpp
runtime/test/: CMakeLists.txt  med.cpp  meingott.cpp  rtl_load_space.cpp  runtime_tests.cpp  vspace_0.cpp
runtime/vspace/: CMakeLists.txt  README.md  binary_vector.hpp  elemental_space.hpp  feature_space.hpp  main.cpp  semantic_space.hpp  space.hpp  symbol.hpp  symbolic_space.hpp  symbolic_vector.hpp  table.hpp  test.cpp
sdm/dig/: AppDelegate.swift  FirstViewController.swift  SecondViewController.swift  post.swift
sdm/dig/Base.lproj/: Main.storyboard
sdm/digTests/: digTests.swift
sdm/digUITests/: digUITests.swift
sdm/sdm.xcodeproj/: project.pbxproj
sdm/sdmi/: sdm.h  sdm.mm  sdmi.h
sdm/sdmiTests/: sdmiTests.swift
src/: CMakeLists.txt  README.md
src/mms/: binary_vector.hpp  elemental_space.hpp  elemental_vector.hpp  ephemeral_vector.hpp  feature_space.hpp  semantic_space.hpp  symbol.hpp  symbol_space.hpp  symbolic_space.hpp  vector_space.hpp
src/repl/: CMakeLists.txt  frametrain.cpp  main.cpp  parser.hpp
src/rtl/: CMakeLists.txt  FindSDM.cmake  csdm.cpp  csdm.h  database.cpp  database.hpp  io.hpp  runtime.cpp  runtime.hpp  runtime_exceptions.hpp  runtime_ffi.cpp  sdmconfig.h  sdmlib.cpp  sdmlib.h  sdmstatus.h  search_request.pb.cc  search_request.pb.h  search_request.proto  topology.hpp  topology_messages.hpp  topology_request.h  topology_request.pb.cc  topology_request.pb.h  topology_request.proto
src/sdm/: CMakeLists.txt
src/sdm/lib/: CMakeLists.txt  sdm.c
src/sdm/test/: CMakeLists.txt  test_runtime.c
src/sdm/util/: fast_random.hpp  rand.h
src/sdmi/sdmi/: sdmi.h
src/sdmi/sdmi.xcodeproj/: project.pbxproj
src/sdmi/sdmiTests/: sdmiTests.swift
src/test/: CMakeLists.txt  capi.c  ctest.c  frametrain.cpp  low.cpp  med.cpp  meingott.cpp  mms_0.cpp  rtl_load_space.cpp  sdmi.cpp  test.cpp  topology.cpp
src/util/: fast_random.hpp  sort.h
test/: LICENSE  README.md  Test.org  reptile.cabal  reptile.hs  reptile.pure  tools.pure
